kubernetes/foundation/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: file-tunnel
  labels:
    app.kubernetes.io/part-of: file-tunnel
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
