kubernetes/foundation/default-deny.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: file-tunnel
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
